Checking in Mike Pilquist's patch, which adds -argLine -debugForkedProcess and -debuggerPort args. Also, it fixes a compiler error caused by a lingering reference to the deleted GuiMojo.
git-svn-id: http://scalatest.googlecode.com/svn/branches/maven-scalatest-plugin@3318 fd1274fd-080f-5963-8033-43ee40fcd1de